<resources>
    <string name="app_name">Buddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="splash_screen_text">Welcome to Buddy</string>

    <string name="action_cadastrar_cronograma">Cadastrar Cronograma</string>
    <string name="action_deletar_cronograma">X</string>
    <string name="action_cadastrar_atividade">Cadastrar Atividade</string>
    <string name="confirm_cadastrar">Confirmar Senha</string>
    <string name="action_cadastrar">Cadastrar</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Entrar</string>
    <string name="select_cronograma">Selecione o Cronograma</string>

    <!-- Strings related to login -->
    <string name="prompt_nome_cronograma">Nome do Cronograma</string>
    <string name="prompt_nome_atividade">Nome da Atividade</string>
    <string name="prompt_valor_atividade">Valor da Atividade</string>
    <string name="prompt_data_entrega_atividade">Data de Entrega</string>
    <string name="btn_novo_atividade">Nova Atividade</string>
    <string name="prompt_senha_confirmar">Confirmar Senha</string>
    <string name="prompt_nome_cadastrar">Nome</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Digite um email válido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btn_novo_cronograma">Novo Cronograma</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cadastrar">Cadastrar</string>
</resources>
