<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="64dp"
    tools:context="buddy.tecnologia.ws.buddy.NovoAtividade">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="19dp"
            android:id="@+id/select_cronograma"
            android:prompt="@string/select_cronograma"></Spinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/nome_atividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/prompt_nome_atividade"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<AutoCompleteTextView
                android:id="@+id/data_entrega_atividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_data_entrega_atividade"
                android:inputType="date"
                android:maxLines="1"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Data de Entrega"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/data_entrega_atividade"
                android:text="Seleciona a Data de Entrega"
                android:hint="Data de Entrega"
                android:textSize="19dp"
                android:padding="10dp"/>


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/valor_atividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/prompt_valor_atividade"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

            <Button
                android:id="@+id/btn_cadastrar_atividade"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_cadastrar_atividade"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>

</FrameLayout>
